static/style.css
html, body, h1, h2, h3, h4, p {
    height:100%;
    width:100%;
    margin:0;
    padding:0;
}

nav{    
  width: 150px;
  float: left;
  display: inline;
  margin: 0;
  padding: 0;
  margin-right: 10px;
}

body{
    background-color: darkgrey;
}

.sidenav{
    background-color: black;
    width: 200px;
    position: fixed;
    top: 0;
    bottom: 0;
    left: 0;
    text-decoration: none;
}

a {
    color:aliceblue;
    text-decoration: none;
    line-height: 40px
}

.player-grid {
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
    gap: 20px;
    padding: 20px;
    margin-left: 200px;
}

.player-card {
    display: block;
    text-decoration: none;
    color: white;
    background: #1d4ed8;
    border-radius: 15px;
    overflow: hidden;
    transition: transform 0.2s ease;
    position: relative;
    padding: 14px;
}

.player-card:hover {
    transform: scale(1.03);
}


.player-info {
    padding: 15px;
}

.player-info h3 {
    margin: 0;
}

.player-image {
    position: absolute;
    right: 0;
    bottom: 0;
    height: 180px;
    left: 140px
}

